Fix: Set a minimum width on dialog boxes to prevent overlaps in case of little content inside

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -474,6 +474,7 @@ html {
     background-color: var(--drawerColor);
     border-radius: var(--largeRadius) !important;
     border: solid var(--borderColor) var(--borderWidth);
+    min-width: 15em;
 }
 
 .dialogBackdropOpened {
